# ProjectLens-AI

./: .gitignore  README.md  config-example.toml  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  learning-notes-tr.md
docs/eval/: README.md  projectlens-self.json
src/projectlens_ai/: __init__.py  ask.py  checks.py  chunks.py  cli.py  config.py  embedding_store.py  embeddings.py  eval.py  hybrid_search.py  index_store.py  js_ts_parser.py  language_support.py  mcp_server.py  mcp_tools.py  models.py  packer.py  scanner.py  search.py  semantic_search.py
tests/: test_ask.py  test_checks.py  test_chunks.py  test_cli.py  test_config.py  test_embeddings.py  test_eval.py  test_hybrid_search.py  test_index_store.py  test_language_support.py  test_mcp_tools.py  test_packer.py  test_scanner.py  test_search.py
