[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectlens-ai"
version = "0.1.0"
description = "Local-first codebase understanding tool with repository maps, guided prompts, retrieval, checks, and MCP integration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yusuf" }
]
keywords = ["ai", "developer-tools", "codebase", "mcp", "rag"]
dependencies = ["tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
local-embeddings = ["sentence-transformers>=3.0"]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
projectlens = "projectlens_ai.cli:main"
projectlens-mcp = "projectlens_ai.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
